# stuff

./: .gitignore  README.md  app.py  app.yaml  pyproject.toml  requirements.txt
bot-detection-demo/: DEMO.md  TASKS.md  databricks.yml  pyproject.toml  requirements.txt
bot-detection-demo/app/: .gitignore  app.py  app.yaml  pyproject.toml  requirements.txt
bot-detection-demo/app/frontend/: index.html  package.json
bot-detection-demo/app/frontend/src/: App.tsx  (+1 more)
bot-detection-demo/app/server/: config.py
bot-detection-demo/src/: 01_generate_data.py  02_feature_engineering.py  03_train_model.py  04_setup_online_store.py  05_create_serving_endpoint.py
pokedex-demo/: .gitignore  app.py  databricks.yml  pyproject.toml  requirements.txt
pokedex-demo/frontend/: index.html  package.json  tailwind.config.js
pokedex-demo/frontend/src/: App.tsx  index.css  types.ts
pokedex-demo/server/: config.py  llm.py
pokedex-demo/server/routes/: pokemon.py
seconddinner-serving-core/: .gitignore  app.py  app.yaml  databricks.yml  pyproject.toml  requirements.txt
seconddinner-serving-core/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
seconddinner-serving-core/frontend/src/: App.tsx  codeExamples.ts  index.css  types.ts
seconddinner-serving-core/notebooks/: 01_generate_card_data.py  02_compute_embeddings.py  03_train_kmeans.py  04_batch_inference.py  04b_setup_batch_online.py  05_setup_online_store.py  06_create_serving_endpoint.py  07_setup_vector_search.py
seconddinner-serving-core/sd-shared/: 01_generate_card_data.py  02_compute_embeddings.py  03_train_kmeans.py  04_batch_inference.py  06_create_serving_endpoint.py
seconddinner-serving-core/server/: config.py
seconddinner-serving-core/server/routes/: batch.py  feature_serving.py  foundation_model.py  model_serving.py  retl.py  vector_search.py
zerobus-snap-demo/: app.py  app.yaml  databricks.yml  pyproject.toml  requirements.txt
zerobus-snap-demo/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
zerobus-snap-demo/frontend/src/: App.tsx  index.css  types.ts
zerobus-snap-demo/server/: config.py  delta_reader.py  producer.py
zerobus-snap-demo/server/routes/: delta.py  producer.py
(+74 files in other folders)
