[project]
name = "advertiser-segments"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "databricks-sdk>=0.88.0",
    "fastapi>=0.129.0",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0",
]
