[project]
name = "seconddinner-serving-core"
version = "0.1.0"
description = "SecondDinner Serving Core — Marvel Snap Card Synergy across all Databricks serving modalities"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "databricks-sdk>=0.30.0",
    "pydantic>=2.0.0",
    "psycopg[binary]>=3.1.0",
]
